[tool.poetry]
name = "pgesmd_self_access"
version = "0.1.0"
description = ""
authors = ["prashanth <prashanthsandela@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
astroid = "^2.12.10"
attrs = "^22.1.0"
black = "^22.8.0"
certifi = "^2022.9.14"
chardet = "^5.0.0"
click = "^8.1.3"
idna = "^3.4"
isort = "^5.10.1"
lazy-object-proxy = "^1.7.1"
mccabe = "^0.7.0"
pathspec = "^0.10.1"
pylint = "^2.15.2"
python-dateutil = "^2.8.2"
pytz = "^2022.2.1"
regex = "^2022.9.13"
requests = "^2.28.1"
six = "^1.16.0"
toml = "^0.10.2"
typed-ast = "^1.5.4"
urllib3 = "^1.26.12"
wrapt = "^1.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
